--- a/pom.xml
+++ b/pom.xml
@@ -5,4 +5,35 @@
     <artifactId>api-rest-full-dropwizard-archetype</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <build>
+    <extensions>
+      <extension>
+        <groupId>org.apache.maven.archetype</groupId>
+        <artifactId>archetype-packaging</artifactId>
+        <version>2.2</version>
+      </extension>
+    </extensions>
+
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-archetype-plugin</artifactId>
+          <version>2.2</version>
+          <extensions>true</extensions>
+        </plugin>
+        <!-- Make sure we include empty dirs in the archetypes' jars, but exclude the .emptydir-placeholder files.
+             We could do this in the archetype-metadata instead (adding the exclude in <fileSet>, but it currently
+             doesn't work (see https://jira.codehaus.org/browse/ARCHETYPE-458 ) -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-resources-plugin</artifactId>
+          <configuration>
+            <includeEmptyDirs>true</includeEmptyDirs>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+    <sourceDirectory>/src/main/java</sourceDirectory>
+  </build>
 </project>
